# usbtool

./: .autogenerate_readme.sh  .description.md  .install.md  README.md  pyproject.toml  setup.py  url.sh
usbtool/: __init__.py  usbtool.py
